test/errors/ambiguous_field_type_import.ecsact
package Amby;

enum amby {
  SOME_VAL = 10;
}
